# esp32

doc/: esp32模块_软件设计_20200623.md
tempproject/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
tempproject/main/: CMakeLists.txt  app_net.c  app_net.h  app_uart.c  app_uart.h  bsp_wifi.c  bsp_wifi.h  clog.h  first_task.c  first_task.h  main.c  net_task.c  net_task.h  rtos_tools.c  second_task.c  second_task.h  system_param.c  system_param.h  task_list.c  test.c  test.h  uart_task.c  uart_task.h  version.h
