idf_component_register(SRCS "main.c"
                            "test.c"
                            "first_task.c"
                            "second_task.c"
                            "net_task.c"
                            "rtos_tools.c"
                            "task_list.c"
                            "system_param.c"
                            "app_net.c"
                            "bsp_wifi.c"
                    INCLUDE_DIRS "")

